--- a/plan.html
+++ b/plan.html
@@ -93,6 +93,10 @@
                 ♻️ PLAN RM 3500 <br>
                 RM 300 x 90 hari = RM 27,000
             </div>
+            <div class="box center-text">
+                ♻️ PLAN RM 6500 <br>
+                RM 600 x 95 hari = RM 57,000
+            </div>
         </div>
 
     </section>
