--- a/plan.html
+++ b/plan.html
@@ -72,7 +72,7 @@
         </div>
 
 
-        <img id="img-box" src="img/plan/plan.jpg">
+        <img id="img-box" src="img/plan/plan-new.jpg">
 
         <div class="flex-container">
             <div class="box center-text">
